@startuml

package dao {


    abstract OfferDao{
        # OfferDao()
        + {static} getInstance() : QuestionDao
        - {static} LazyHolder()
        getOffersFromUser(userId : int) : Offer[]
        getOffersByCity(city : String) : Offer[]
        getLatestOffers() : Offer[]
        getOffersByCategory(idCat:int): Offer[]
        getPriorityOffers(): PriorityOffer[]
        offerExists(id : int) : boolean
    }
    class OfferDaoMySQL
    FactoryDaoMySQL -up-|> AbstractFactoryDao
    OfferDaoMySQL -up-|> OfferDao


    interface DAO<T>{
        find(id : int) : T
        create(T obj) : T
        update(T obj) : T
        delete(T obj) : boolean
    }

    abstract AbstractFactoryDao{
        - {static} final connectionDB : ConnectionDB
        + {static} getFactory(type : TypeDB) : AbstractFactoryDao
        + getOfferDao() : OfferDao
        + getReservationDao() : ReservationDao
        + getUserDao() : UserDAO
        + getHistoryDao() : HistoryDao
        + getQuestionDao() : QuestionDao
        + getAnswerDao() : AnswerDao
        + getScoreOfferDao() : ScoreOfferDao
        + getCommentDao() : CommentDao
        + getCategoryDao() : CategoryDao
        + getFavoryDao() : FavoryDao
    }

    class FactoryDaoMySQL{
    }


    DAO <|.. OfferDao
    OfferDao-->AbstractFactoryDao
}
package db{
    class ConnectionDBMySQL{
        - connection : Connection
        - ConnectionDBMySQL()
        + {static} getInstance() : ConnectionDBMySQL
        + getDb() : Connection
    }

    class LazyHolderDB{
        + {static} final INSTANCE : ConnectionDBMySQL
    }
    interface ConnectionDB
    ConnectionDBMySQL -Left-> LazyHolderDB
    ConnectionDBMySQL .up.|> ConnectionDB

}
package business{
    class SessionFacade{
        + SessionFacade()
        + getUser() : User
    }

    class Offer{
        -offerId : int
        -title : String
        -pricePerDay : int
        -description : String
        -toolState : String
        -isPriority : boolean
        -userId : int
        -categoryId : int
        + Offer(String title,int price,String desc,String state,boolean isPriority,int userId,int categoryId)
        + getOfferId() : int
        + getTitle() : String
        + getPricePerDay() : int
        + getDescription() : String
        + getUserId() : int
        + getCategoryId() : int
        + setTitle(title:String) : void
        + setDescription(description:String) : void
        + setPricePerDay(price:int) : void
        + setUserId(userId:int) : void
        + setCategoryId(categoryId:int) : void
        + setIsPriority(b:boolean) : void
    }

    class PriorityOffer{
        -dateStartPriority : date
        -dateEndPriority : date
        +PriorityOffer()
        +isExpired() : boolean
    }
    class OfferFacade{
        + OfferFacade()
        + getOffer(idOffer : int) : Offer
        + createOffer(idUser : int, title : String, description : String, state : String, Category : String, ...) : Offer
        + updateOffer(idOffer : int, idUser : int, title : String, description : String, state : String, Category : String, ...) : Offer
        + deleteOffer(offerId : int) : void
        + newReservation(offerId : int) : void
    }

        Offer <|-- PriorityOffer


}

package gui{

    class LoadView{
        + {static} load(nameFxml : Parent) : Parent
        + {static} changeScreen(actionEvent : ActionEvent, view : String) : void
    }

    package controller{
        class OfferController{
            -offerTitle : JFXTextField
            -offerDescription : JFXTextArea
            -offerState : JFXChoiceBox
            -offerCategory : JFXChoiceBox
            -offerPriority : JFXCheckBox
            -dateStartPriority : JFXDatePicker
            -dateEndPriority : JFXDatePicker
            + handleNewOffer(actionEvent : ActionEvent) : void
            + handleViewOffer(actionEvent : ActionEvent) : void
            + handleDeleteOffer(actionEvent : ActionEvent) : void
            + handleUpdateOffer(actionEvent : ActionEvent) : void
            + handleNewReservation(actionEvent : ActionEvent) : void

            + handleDeleteComment(actionEvent : ActionEvent) : void
            + handleUpdateComment(actionEvent : ActionEvent) : void
            + handleDeleteRate(actionEvent : ActionEvent) : void

        }

    }
}
OfferFacade <--Up- OfferController
SessionFacade <-Up- OfferFacade



@enduml